Refactor: Centralize constants, add OpenAPI, Actuator, and improve tests
- Centralized hardcoded strings and error codes in AppConstants.
- Integrated OpenAPI (Swagger) for API documentation.
- Added Spring Boot Actuator for observability.
- Externalized JWT configuration.
- Added 'enabled' field to User entity.
- Implemented global exception handling for better error responses.
- Updated demo_showcase.sh to fix paths and verify new endpoints.
- Added comprehensive unit tests for JwtUtil and updated existing tests.